Frontend - fixing scrollbars

--- a/frontend/src/assets/styles/cmps/group/_group-list.scss
+++ b/frontend/src/assets/styles/cmps/group/_group-list.scss
@@ -1,6 +1,6 @@
 .group-list-section {
   display: flex;
-  height: 85vh;
+  height: 89vh;
   padding-top: 0;
   padding-left: 19px;
   padding-right: 8px;
