--- a/frontend/src/assets/styles/cmps/task/_task-list.scss
+++ b/frontend/src/assets/styles/cmps/task/_task-list.scss
@@ -12,18 +12,18 @@
 
   &::-webkit-scrollbar {
     // height: 1px;
-    width: 1px;
+    width: 8px;
   }
   &::-webkit-scrollbar-thumb {
-    background-color: rgba(24, 22, 191, 0.456);
-    height: 12px;
+    background: rgba(0, 0, 0, 0.2);
+    // height: 12px;
     border-radius: 0.2rem;
   }
 
   &::-webkit-scrollbar-track {
-    background: rgba(0, 0, 0, 0.2);
-    margin: 50px;
-    height: 12px;
+    background-color: rgba(235, 229, 229, 0.456);
+    // margin: 50px;
+    // height: 12px;
     border-bottom: 10px solid transparent;
     border-radius: 0.2rem;
   }
